--- a/site/package.json
+++ b/site/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-vue": "~10.4.0",
     "jiti": "^2.5.1",
+    "npm-run-all": "^4.1.5",
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.5.6",
     "prettier": "3.6.2",
